--- a/alpha1/package.json
+++ b/alpha1/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@ministryofjustice/frontend": "0.0.6-alpha",
     "moment": "2.24.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
