--- a/alpha1/package.json
+++ b/alpha1/package.json
@@ -33,5 +33,8 @@
     "@ministryofjustice/frontend": "0.0.7-alpha",
     "govuk-frontend": "v2.13.0",
     "node-sass": "4.12.0"
+  },
+  "optionalDependencies": {
+    "lodash": "4.17.13"
   }
 }
