--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,20 +30,21 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - run:
+          name: Update npm
+          command: 'sudo npm install -g npm@latest'
       - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
-          command: yarn install
+          command: npm ci
       - save_cache:
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
       - run:
           command: |
-            yarn build
+            npm run build
             DATE=$(date '+%Y-%m-%d')
             export BUILD_NUMBER=${DATE}.${CIRCLE_BUILD_NUM}
             export GIT_REF="$CIRCLE_SHA1"
@@ -58,12 +59,10 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: unit tests
-          command: yarn test
+          command: npm run test
       - store_test_results:
           path: ./reports
 
