--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 defaults: &defaults
   working_directory: ~/mojdigitalstudio/probation-court-prototype
   docker:
-    - image: circleci/node:12.13.0-browsers
+    - image: circleci/node:12.12.0
       environment:
         GITHUB_TEAM_NAME_SLUG: probation-services
         APPLICATON_DEPLOY_NAME: probation-court-prototype
